--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,19 +7,19 @@
 <body>
 <ul>
     <li>
-        <a href="game">1 스테이지 이동</a>
+        <a href="game?stage=1">1 스테이지 이동</a>
     </li>
     <li>
-        <a href="game">2 스테이지 이동</a>
+        <a href="game?stage=2">2 스테이지 이동</a>
     </li>
     <li>
-        <a href="game">3 스테이지 이동</a>
+        <a href="game?stage=3">3 스테이지 이동</a>
     </li>
     <li>
-        <a href="game">4 스테이지 이동</a>
+        <a href="game?stage=4">4 스테이지 이동</a>
     </li>
     <li>
-        <a href="game">5 스테이지 이동</a>
+        <a href="game?stage=5">5 스테이지 이동</a>
     </li>
 </ul>
 
