세션, 로그인 회원가입 만듬

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인 화면</title>
+    <script>
+
+        async function getProfile() {
+            try {
+                const response = await fetch('http://localhost:8080/api/profile');
+                if (response.ok) {
+                    // const data = await response.json();
+                } else if (response.status === 401) {
+                    console.log("로그인이 필요합니다.")
+                    window.location.replace('http://localhost:8080/login')
+                }
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        }
+
+        getProfile();
+    </script>
 </head>
 <body>
-로그인
-
-<a href="menu">시작</a>
+<a href="menu">메뉴 보기</a>
 
 </body>
 </html>
