회원 탈퇴 개발

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
         <button class="drawer-icon"><i class="fas fa-bars"></i></button>
         <div class="drawer-content">
             <ul>
-                <li><a href="#">내정보 보기</a></li>
-                <li><a href="#">로그아웃</a></li>
-                <li><a href="#">회원탈퇴</a></li>
+                <li><a onclick="getProfile()">내정보 보기</a></li>
+                <li><a onclick="logout()">로그아웃</a></li>
+                <li><a onclick="deleteUser()">회원탈퇴</a></li>
             </ul>
         </div>
     </div>
