--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인 페이지</title>
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-    <script src="screens/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="src/login/login.css">
+    <script src="src/login/login.js"></script>
 </head>
 <body>
 <div class="container">
