해금된 스테이지 입장, 별 보여주기 개발

--- a/src/main/resources/static/src/index/index.css
+++ b/src/main/resources/static/src/index/index.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: blanchedalmond;
 }
 
@@ -32,15 +32,14 @@ body{
     cursor: pointer;
 }
 
-
+/*스테이지 버튼*/
 .center {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-
-#stage-buttons{
+#stage-buttons {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,17 +48,47 @@ body{
 }
 
 .stage-button {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 200px;
-    height: 60px;
-    background-color: #3f72af;
     color: white;
-    text-align: center;
     line-height: 60px;
+    padding: 12px;
     margin-bottom: 10px;
     font-size: 18px;
     text-decoration: none;
 }
+
+.unlock {
+    background-color: #3f72af;
+}
+
+.lock {
+    background-color: #7e7e7e;
+}
+
+/*별 아이콘*/
+.star-icons {
+    display: flex;
+}
+
+.star {
+    width: 20px; /* 별 아이콘의 가로 크기 */
+    height: 20px; /* 별 아이콘의 세로 크기 */
+    background: black;
+    margin-right: 5px; /* 별 아이콘 사이의 간격 */
+}
+
+.gray{
+    background: gray;
+}
+.yellow{
+    background: yellow;
+}
+
+/*랭킹*/
 
 .top-right {
 
@@ -92,8 +121,8 @@ body{
     margin-right: 10px;
 }
 
-.star,
-.move {
+.starText,
+.moveText {
     font-weight: bold;
 }
 
