--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="src/login/login.css">
     <script type="module" src="src/login/login.js" defer></script>
 </head>
-<body>
+<body >
 <div class="container">
-    <h1>인하 모험가</h1>
-    <div class="login-form">
-        <input id="id-form" type="text" placeholder="아이디" required>
-        <input id="password-form" type="password" placeholder="비밀번호" required>
-        <button id="login-button" type="submit">로그인</button>
-    </div>
+    <h1>Inha Escape</h1>
+    <form class="login-form">
+        <input id="id-form" type="text" placeholder="아이디">
+        <input id="password-form" type="password" placeholder="비밀번호">
+        <button id="login-button" type="submit">플레이</button>
+    </form>
     <p class="signup-link">계정이 없으신가요? <a href="signup">회원가입</a></p>
 </div>
 <div class="notification-container" id="notification-container"></div>
