--- a/src/main/resources/static/src/login/login.css
+++ b/src/main/resources/static/src/login/login.css
@@ -1,7 +1,13 @@
+@font-face {
+    font-family : 'pixel';
+    src : url("../../assets/fonts/DungGeunMo.woff")
+}
+/*a2ff7a*/
+/*8751fb*/
 body {
-    background-color: blanchedalmond;
-    color: #000000;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #181e24;
+    color: #ffffff;
+    font-family: "pixel", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,17 +16,29 @@ body {
     overflow: hidden;
 }
 
-.container {
-    text-align: center;
+input:focus {outline: none;}
 
+/*.login-form{*/
+/*    text-align: left;*/
+/*}*/
+.left{
+    text-align: left;
+}
+.input-form{
+    margin-top: 8px;
 }
 
+.container {
+    text-align: center;
+}
+
+/*제목*/
 h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+    font-size: 42px;
+    margin-bottom: 50px;
     letter-spacing: 2px;
-    text-transform: uppercase;
-    color: #000;
+    /*text-transform: uppercase;*/
+    color: #a2ff7a;
 }
 
 .login-form input {
@@ -32,24 +50,30 @@ h1 {
     border: none;
     border-radius: 4px;
     font-size: 16px;
-    background-color: #fff;
-    color: #000;
+    background-color: #4c447c;
+    color: white;
 }
 
+/*로그인 버튼*/
 .login-form button {
-    width: 150px;
-    height: 40px;
-    background-color: #8B4513;
+    margin-top: 10px;
+    width: 190px;
+    height: 54px;
+    background-color: #8751fb;
     color: #fff;
     border: none;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 24px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: pixel, sans-serif;
+}
+input::placeholder {
+    color: rgba(255, 255, 255, 0.75);
 }
 
 .login-form button:hover {
-    background-color: #654321;
+    background-color: #6d29ff;
 }
 
 .signup-link {
@@ -58,13 +82,17 @@ h1 {
 }
 
 .signup-link a {
-    color: #000000;
+    color: #a2ff7a;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .signup-link a:hover {
-    color: #654321;
+    color: #68ff23;
+}
+
+#nickname-form{
+    margin-bottom: 30px;
 }
 
 
