--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,13 +8,18 @@
 </head>
 <body>
 <div class="container">
-  <h1>회원가입</h1>
+  <h1>지원서</h1>
   <div class="login-form">
-    <input id="nickname-form" type="text" placeholder="닉네임" required>
-    <input id="id-form" type="text" placeholder="아이디" required>
-    <input id="password-form" type="password" placeholder="비밀번호" required>
-    <button id="signup-button" type="submit">회원가입</button>
-
+    <div class="left">
+      닉네임
+      <input id="nickname-form" class="input-form" type="text" placeholder="닉네임" required>
+      아이디
+      <input id="id-form" class="input-form" type="text" placeholder="아이디" required>
+      비밀번호
+      <input id="password-form" class="input-form" type="password" placeholder="비밀번호" autocomplete="new-password"
+             required>
+    </div>
+    <button id="signup-button" type="submit">제출하기</button>
   </div>
 
 </div>
