스테이지 설명, 맵 디자인

--- a/src/main/resources/static/src/index/index.css
+++ b/src/main/resources/static/src/index/index.css
@@ -5,24 +5,41 @@
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     background-color: #181e24;
     font-family: "pixel", sans-serif;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0;
     color: white;
+    overflow: hidden;
+    height: 100vh;
+
 }
 
 h1 {
     color: #a2ff7a;
     font-size: 42px;
+
 }
 
 /*스테이지 버튼*/
 .center {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+}
+
+.scroller {
+    overflow: scroll;
+    /*background: blanchedalmond;*/
+    flex-grow: 1;
+}
+
+.scroller::-webkit-scrollbar {
+    display: none;
 }
 
 #stage-buttons {
@@ -53,8 +70,17 @@ h1 {
     background-color: #8751fb;
 }
 
+.unlock:hover {
+    background-color: #9864ff;
+    cursor: pointer;
+}
+
 .lock {
     background-color: #5e586c;
+}
+
+.lock:hover {
+    cursor: pointer;
 }
 
 /*별 아이콘*/
@@ -102,20 +128,30 @@ h1 {
 /*랭킹*/
 
 .top-right {
-    color: black;
     position: absolute;
     top: 20px;
     right: 20px;
+}
+
+.white-box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     background-color: #fff;
+    color: black;
     border-radius: 10px;
 }
 
-.ranking-button {
+.ranking-title {
+    display: flex;
+    align-items: center;
     margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #8751fb;
 }
 
 .ranking-item {
@@ -125,15 +161,120 @@ h1 {
 }
 
 .rank {
+    font-weight: bold;
+    width: 20px;
     margin-right: 10px;
+    font-size: 18px;
 }
 
 .nickname {
+    width: 80px;
+    text-align: left;
     margin-right: 10px;
 }
 
 .starText,
 .moveText {
-    font-weight: bold;
+    width: 50px;
+}
+
+.gold {
+    color: gold;
+}
+
+.silver {
+    color: silver;
+}
+
+.bronze {
+    color: goldenrod;
+}
+
+#popup-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.3);
+    visibility: hidden;
+}
+
+/*스테이지 정보*/
+#stage-info {
+    align-content: center;
+    /*width: 100vw;*/
+    /*margin: 200px;*/
+    width: 1000px;
+    height: 500px;
+    /*height: calc(100vh - 200px);*/
+    background: #8751fb;
+    border-radius: 20px;
+
+}
+
+
+.column {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    /*background: darkviolet;*/
+}
+
+.star-score-container {
+    /*padding: 0px;*/
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+
+.exit {
+    position: absolute;
+    /*left: 200px;*/
+    left: calc(100vw/2 - 500px);
+    font-size: 42px;
+    margin: 30px;
+    cursor: pointer;
+}
+
+.inner-right-top {
+    position: absolute;
+    /*right: 220px;*/
+    right: calc(100vw/2 - 500px + 20px);
+    /*top: 200px;*/
+    padding: 20px;
+}
+
+.expanded {
+    flex-grow: 1;
+    /*background: darkseagreen;*/
+}
+
+#play-button {
+    align-items: center;
+    width: 290px;
+    padding: 12px;
+    line-height: 36px;
+    color: #3a3a02;
+    margin-bottom: 45px;
+    font-size: 28px;
+    text-decoration: none;
+    border-radius: 10px;
+    background: #a2ff7a;
+}
+
+#play-button:hover {
+    background: #c1ffa3;
+    cursor: pointer;
+}
+
+#star1-score,#star2-score,#star3-score{
+    display: inline-block;
+    width: 60px;
 }
 
