--- a/src/main/resources/static/src/stage/stage.css
+++ b/src/main/resources/static/src/stage/stage.css
@@ -1,4 +1,11 @@
+@font-face {
+    font-family: 'pixel';
+    src: url("../../assets/fonts/DungGeunMo.woff")
+}
+
+
 body {
+    font-family: pixel;
     background: #181e24;
     margin: 0;
     overflow-x: hidden;
@@ -27,6 +34,53 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
+
+
+.top-right {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+#stage-name{
+    /*display: inline;*/
+    color: #a2ff7a;
+    font-size: 24px;
+    margin-top: 15px;
+    word-break: break-all;
+}
+
+.white-box {
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: #8751fb;
+    color: white;
+    border-radius: 10px;
+}
+
+.star-score-container {
+    /*padding: 0px;*/
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+#star1-score,#star2-score,#star3-score{
+    display: inline-block;
+    width: 20px;
+}
+.gray {
+    color: #e7e7e7;
+}
+
+.yellow {
+    color: yellow;
+}
+
+
 
 /*게임*/
 
@@ -139,10 +193,116 @@ table {
 
 
 .disable {
-    background: #dadada;
+    background: #f5f1ff;
     color: black;
 }
 
 .selected {
     background: #7238ff;
 }
+
+
+/*클리어창*/
+
+#popup-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.3);
+    visibility: hidden;
+}
+
+#clear-text{
+    color: #a2ff7a;
+    font-size: 32px;
+
+}
+
+#stage-info {
+    align-content: center;
+    /*width: 100vw;*/
+    /*margin: 200px;*/
+    width: 600px;
+    height: 300px;
+    /*height: calc(100vh - 200px);*/
+    background: #8751fb;
+    border-radius: 20px;
+
+}
+
+
+.column {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    /*background: darkviolet;*/
+}
+
+.clear-star-container {
+    /*padding: 0px;*/
+    font-size: 32px;
+    margin-bottom: 16px;
+    color: white;
+}
+
+#clear-rank{
+    color: white;
+    font-size: 32px;
+}
+
+.cleared{}
+
+
+
+.expanded {
+    flex-grow: 1;
+    /*background: darkseagreen;*/
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+}
+
+.clear-button {
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height:35px;
+    padding: 12px;
+    margin: 0 15px 35px 15px;
+    text-decoration: none;
+    border-radius: 6px;
+    background: #a2ff7a;
+
+}
+
+.clear-button:hover {
+    background: #c1ffa3;
+    cursor: pointer;
+}
+
+.material-icons.clear-icon{
+    color: #3a3a02;
+    font-size: 32px;
+}
+
+.hidden{
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+}
+
+
+
