--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <div class="header">
-    <a href="#" id="profile-button">Profile</a>
-    <a href="#" id="logout-button">Logout</a>
-    <a href="#" id="withdraw-button">WithDraw</a>
+    <a id="profile-button">Profile</a>
+    <a id="logout-button">Logout</a>
+    <a id="withdraw-button">WithDraw</a>
 </div>
 
 <h1>Inha Escape</h1>
