--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <a id="profile-button">Profile</a>
     <a id="logout-button">Logout</a>
     <a id="withdraw-button">WithDraw</a>
+    <a id="admin-button" style="visibility: hidden">admin page</a>
 </div>
 
 <h1>Inha Escape</h1>
